<resources>
    <string name="app_name">移动公卫 2.0</string>
    <string name="content">图标</string>
    <string name="no_content">没有新的内容</string>


    <!-- pulltorefresh -->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <!-- 体检 -->
    <string name="dNumber">0123456789</string>
    <string name="dDouble">0123456789.</string>
    <string name="healthExamDate">体检日期</string>
    <string name="respDoctor">责任医生</string>
    <string name="symptom">症状</string>
    <string name="bodyTemperature">体温</string>
    <string name="pulseRate">脉率</string>
    <string name="breathingRate">呼吸频率</string>
    <string name="blood_pressure">血压</string>
    <string name="lsbp">左侧收缩压</string>
    <string name="ldbp">左侧舒张压</string>
    <string name="rsbp">右侧收缩压</string>
    <string name="rdbp">右侧舒张压</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="waist">腰围</string>
    <string name="bmi">体质指数</string>
    <string name="physical_exercise">体育锻炼</string>
    <string name="exerciseFreq">锻炼频率</string>
    <string name="exerciseDurationMins">每次锻炼时间</string>
    <string name="exerciseYear">坚持锻炼时间</string>
    <string name="exerciseWay">锻炼方式</string>
    <string name="food_habits">饮食习惯</string>
    <string name="smokingStatus">吸烟情况</string>
    <string name="dailySmoking">日吸烟量</string>
    <!-- 个人信息 -->
    <string name="modify_personal">修改个人信息</string>
    <string name="committee">居(村)委会*</string>
    <string name="residential">小区</string>
    <string name="building">楼栋</string>
    <string name="name">姓名</string>
    <string name="formerName">曾姓名</string>
    <string name="idNo">身份证号</string>
    <string name="birthday">出生日期</string>
    <string name="sex">性别</string>
    <string name="address">家庭地址</string>
    <string name="householdAddress">户籍地址</string>
    <string name="workUnit">工作单位</string>
    <string name="telNo">本人电话</string>
    <string name="fixedPhones">固定电话</string>
    <string name="contactName">联系人姓名</string>
    <string name="contactTelNo">联系人电话</string>
    <string name="relation">与户主关系</string>
    <string name="paperArchiveDate">纸质档案建档时间</string>
    <string name="paperCardNum">纸质档案编号</string>

    <!-- 下载 -->
    <string name="down_delete">删除</string>
    <string name="down_update">更新</string>

    <string name="member_info">个人信息</string>

    <!-- 首页 -->
    <string name="main_title">首页</string>
    <string name="main_rhsf">入户随访</string>
    <string name="main_lgt">老高糖</string>
    <string name="main_exam">体检</string>
    <string name="main_member">人员</string>
    <string name="main_yz">义诊</string>
    <string name="main_sl">失联</string>
    <string name="main_upload">上传</string>
    <string name="main_download">下载</string>
    <string name="main_set">设置</string>

    <!-- 多级下拉菜单地区选择 -->
    <!-- Login -->
    <string name="login_user">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_entry">登    录</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_regist">免费注册</string>
    <string name="fu_bottom_menu_des">底部导航栏的说明</string>
    <string name="fu_home">首页</string>
    <string name="fu_communion">交流</string>
    <string name="fu_news">资讯</string>
    <string name="fu_jy">建议</string>
    <string name="fu_health">健康</string>
    <string name="fu_more">更多</string>
    <string name="paper_archive_date">纸质档案建档时间</string>

    <!-- SweetAlert -->
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
