<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/fu_public_title_layout" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_login"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/rl01_sub0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/content"
                android:src="@mipmap/dianhua" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:background="@null"
                android:hint="手机号"
                android:paddingLeft="10dp"
                android:inputType="number"
                android:lines="1"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />


        <LinearLayout
            android:id="@+id/rl01_sub1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/content"
                android:src="@mipmap/ic_login_user" />

            <EditText
                android:id="@+id/edit_account"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:background="@null"
                android:hint="用户名"
                android:paddingLeft="10dp"
                android:lines="1"
                android:textSize="14sp" />
        </LinearLayout>

        <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/content"
                android:src="@mipmap/ic_login_password" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:background="@null"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="10dp"
                android:lines="1"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/content"
                android:src="@mipmap/ip" />

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:background="@null"
                android:hint="地址"
                android:paddingLeft="10dp"
                android:text="222.223.187.132:7085"
                android:lines="1"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#44afff"
            android:gravity="center"
            android:minHeight="40dip"
            android:text="@string/login_entry"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/login_remember_passwords"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableLeft="@drawable/bt_regist_checkbox"
            android:drawablePadding="2dp"
            android:text="@string/login_remember_password"
            android:textColor="#3aa6d6"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/login_find_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/login_forget_password"
            android:textColor="#3aa6d6"
            android:visibility="gone"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>